# ESN-HE

./: README.md  lorenz_ode.cpp  lorenz_plot.ipynb  mackey.cpp  main.cpp  main.m  main.m~  tf-encrypted.ipynb
HElib-mackey/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  helib_example.cbp  helib_example.cpp
HElib_mackey/: Makefile
MACD/: CMakeCache.txt  MACD.ipynb  MACD_SEAL.ipynb  MACD_cpp.ipynb  Makefile  a.out  apple.csv  cmake_install.cmake  decisions.csv  decisions_ema.csv  decisions_macd.csv  decisions_seal.csv  decisions_wma.csv  macd-seal.ipynb  macd.cpp  macd.csv  macd_ema.csv  macd_seal.csv  macd_seal_old.csv  macd_wma.csv  main  main.cpp  tanh_decisions.csv  tanh_decisions_ema.csv  tanh_decisions_wma.csv  wma12_seal.csv  wma26_seal.csv  wma9.csv  wma9_seal.csv  wma_diff.csv  wma_diff_seal.csv
MACD-HEAAN/run/: MACD  MACD_HEAAN.ipynb  macd.cpp
MACD/.ipynb_checkpoints/: MACD-checkpoint.ipynb  MACD_SEAL-checkpoint.ipynb
SEAL-mackey/: CMakeCache.txt  mackey.cpp  main  main.cpp
SEAL_mackey/: CMakeCache.txt  MAIN.cbp  Makefile  a.out  cmake_install.cmake  main  main.cpp
SEAL_program/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
example_program/: CMakeCache.txt  Makefile  cmake_install.cmake  helib_example.cpp
heaviside/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
lorenz/: a.out  lorenz_plot.ipynb
matrix-mult/: CMakeCache.txt  Makefile  cmake_install.cmake  main
matrix_mult/: a.out  main  main.cpp  mat_mult  mat_mult.cpp  matrix_mult.py
ver4graphESN/: BatchTrainClassifierOutputLayer.m
(+11 files in other folders)
